--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +8,56 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  margin-top: 0;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table td,
+table th {
+  text-align: left;
+  vertical-align: top;
+  padding-right: 1em;
+}
+
+form {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+p,
+table {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+input[type='text'],
+button {
+  height: 2rem;
+  padding: 0 0.5rem;
+  margin: 0 5px 5px 0;
+  box-sizing: border-box;
+  border: 1px solid #adadad;
+  border-radius: 3px;
+}
+
+input[type='text']:focus {
+  outline: none;
+}
+
+button {
+  background: #ededed;
+}
+
+button:hover,
+button:focus {
+  outline: none;
+  background: #d8d8d8;
+}
+
+button::-moz-focus-inner {
+  border: 0;
 }
